server/k8s/production/traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    namespace: kube-system
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`traefik.transvirex.com`)
          kind: Rule
          services:
              - name: api@internal
                kind: TraefikService
    tls:
        secretName: certs
